--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,24 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "1.1.0",
-    "com.unity.ide.vscode": "1.1.2",
-    "com.unity.render-pipelines.high-definition": "7.0.1",
-    "com.unity.test-framework": "1.1.3",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.3",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.xr.management": "3.0.3",
-    "com.unity.modules.ai": "1.0.0",
-    "com.unity.modules.androidjni": "1.0.0",
-    "com.unity.modules.animation": "1.0.0",
-    "com.unity.modules.assetbundle": "1.0.0",
-    "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.cloth": "1.0.0",
-    "com.unity.modules.director": "1.0.0",
-    "com.unity.modules.imageconversion": "1.0.0",
-    "com.unity.modules.imgui": "1.0.0",
+	  "com.unity.ide.rider": "1.1.4",
+	  "com.unity.test-framework": "1.1.5",
+	  "com.unity.timeline": "1.3.0-preview.3",
+	  "com.unity.ugui": "1.0.0",
+	  "com.unity.modules.ai": "1.0.0",
+	  "com.unity.modules.androidjni": "1.0.0",
+	  "com.unity.modules.animation": "1.0.0",
+	  "com.unity.modules.assetbundle": "1.0.0",
+	  "com.unity.modules.audio": "1.0.0",
+	  "com.unity.modules.cloth": "1.0.0",
+	  "com.unity.modules.director": "1.0.0",
+	  "com.unity.modules.imageconversion": "1.0.0",
+	  "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
