ImGui integration going very, very well!

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,20 +1,115 @@
 [Window][Debug##Default]
-Pos=193,226
-Size=400,400
+Pos=922,21
+Size=134,98
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=406,564
-Size=550,643
-Collapsed=0
+Pos=141,233
+Size=798,714
+Collapsed=1
 
 [Window][About Dear ImGui]
-Pos=369,331
-Size=569,109
+Pos=85,88
+Size=837,754
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=96,940
+Pos=48,236
 Size=848,559
+Collapsed=0
+
+[Window][Node Name]
+Pos=219,704
+Size=344,101
+Collapsed=0
+
+[Window][Style Editor]
+Pos=411,276
+Size=660,1631
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=36,24
+Size=961,1914
+Collapsed=0
+
+[Window][Example: Console]
+Pos=126,66
+Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=141,36
+Size=710,547
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=474,107
+Size=363,303
+Collapsed=0
+
+[Window][One]
+Pos=142,953
+Size=421,416
+Collapsed=0
+
+[Window][Two]
+Pos=142,1370
+Size=401,208
+Collapsed=0
+
+[Window][Three]
+Pos=527,1578
+Size=401,104
+Collapsed=0
+
+[Window][Stage]
+Pos=124,814
+Size=227,244
+Collapsed=0
+
+[Window][Choreographer]
+Pos=174,1320
+Size=211,58
+Collapsed=0
+
+[Window][Node]
+Pos=186,1166
+Size=209,56
+Collapsed=0
+
+[Window][0. Stage]
+Pos=142,411
+Size=184,250
+Collapsed=0
+
+[Window][1. Choreographer]
+Pos=140,707
+Size=175,130
+Collapsed=0
+
+[Window][4. Node]
+Pos=146,1544
+Size=253,74
+Collapsed=0
+
+[Window][3. Choreographer]
+Pos=141,1166
+Size=175,70
+Collapsed=0
+
+[Window][2. Node]
+Pos=140,951
+Size=175,130
+Collapsed=0
+
+[Window][4. Type]
+Pos=138,1309
+Size=175,70
+Collapsed=0
+
+[Window][Debugging]
+Pos=417,1075
+Size=100,50
 Collapsed=0
 
