--- a/imgui.ini
+++ b/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-Pos=922,21
-Size=134,98
+Pos=36,11
+Size=166,687
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=141,233
 Size=798,714
-Collapsed=1
+Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=85,88
@@ -79,12 +79,12 @@ Size=209,56
 Collapsed=0
 
 [Window][0. Stage]
-Pos=142,411
+Pos=112,857
 Size=184,250
 Collapsed=0
 
 [Window][1. Choreographer]
-Pos=140,707
+Pos=118,1144
 Size=175,130
 Collapsed=0
 
@@ -94,22 +94,72 @@ Size=253,74
 Collapsed=0
 
 [Window][3. Choreographer]
-Pos=185,1134
+Pos=115,1460
 Size=175,70
 Collapsed=0
 
 [Window][2. Node]
-Pos=140,951
+Pos=117,1308
 Size=175,130
 Collapsed=0
 
 [Window][4. Type]
-Pos=239,1319
+Pos=110,1567
 Size=175,70
 Collapsed=0
 
 [Window][Debugging]
 Pos=417,1075
 Size=100,50
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=390,303
+Size=602,504
+Collapsed=0
+
+[Window][0. MonoBehaviour]
+Pos=27,27
+Size=175,41
+Collapsed=0
+
+[Window][1. Main]
+Pos=91,151
+Size=174,70
+Collapsed=0
+
+[Window][1. Config]
+Pos=24,95
+Size=186,70
+Collapsed=0
+
+[Window][2. Main]
+Pos=28,209
+Size=174,70
+Collapsed=0
+
+[Window][34]
+Pos=60,60
+Size=151,41
+Collapsed=0
+
+[Window][37]
+Pos=60,60
+Size=186,70
+Collapsed=0
+
+[Window][Config]
+Pos=158,216
+Size=186,70
+Collapsed=0
+
+[Window][MonoBehaviour]
+Pos=155,130
+Size=151,40
+Collapsed=0
+
+[Window][Main]
+Pos=336,220
+Size=50,41
 Collapsed=0
 
